--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Wonderful Time</h1>
+<h1>Wonderful Timegi</h1>
 
 <% @ideas.in_groups_of(3) do |group| %>
   <div class="row">
